-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.3.0
-
None
-
Win 7
-
138e14d7bb749c08c751ca107393ce8b29c692d9
Our application crashed when windowHelper() called iface->window() with an invalid QAccessibleInterface object.
Here's the stack trace
> Dragonframe.exe!QWidget::windowHandle() C++ Dragonframe.exe!QWindowsAccessibility::windowHelper() + 0xf bytes C++ Dragonframe.exe!QWindowsAccessibility::notifyAccessibilityUpdate() + 0x2b7 bytes C++ Dragonframe.exe!QAccessible::updateAccessibility() + 0x95 bytes C++ Dragonframe.exe!QMenuPrivate::activateAction() + 0x1c3 bytes C++ Dragonframe.exe!QMenuPrivate::setCurrentAction() + 0x1ad bytes C++ Dragonframe.exe!QMenu::mouseMoveEvent() + 0x18c bytes C++ Dragonframe.exe!QWidget::event() + 0x76 bytes C++ Dragonframe.exe!QMenu::event() + 0x3f bytes C++ Dragonframe.exe!QApplicationPrivate::notify_helper() + 0x98 bytes C++ Dragonframe.exe!QApplication::notify() + 0x6d0 bytes C++ Dragonframe.exe!Application::notify(QObject * receiver, QEvent * e) Line 1300 C++ Dragonframe.exe!QCoreApplication::notifyInternal() + 0x7f bytes C++ Dragonframe.exe!QMenuPrivate::mouseEventTaken() + 0x613 bytes C++ Dragonframe.exe!QMenu::mouseMoveEvent() + 0x36 bytes C++ Dragonframe.exe!QWidget::event() + 0x76 bytes C++ Dragonframe.exe!QMenu::event() + 0x3f bytes C++ Dragonframe.exe!QApplicationPrivate::notify_helper() + 0x98 bytes C++ Dragonframe.exe!QApplication::notify() + 0x6d0 bytes C++ Dragonframe.exe!Application::notify(QObject * receiver, QEvent * e) Line 1300 C++ Dragonframe.exe!QCoreApplication::notifyInternal() + 0x7f bytes C++ Dragonframe.exe!QApplicationPrivate::sendMouseEvent() + 0x2c6 bytes C++ Dragonframe.exe!QWidgetWindow::handleMouseEvent() + 0x218 bytes C++ Dragonframe.exe!QWidgetWindow::event() + 0x106 bytes C++ Dragonframe.exe!QApplicationPrivate::notify_helper() + 0x98 bytes C++ Dragonframe.exe!QApplication::notify() + 0x17be bytes C++ msvcr100.dll!_free() + 0x1c bytes