Accessibility: Fix crash with invalid QAccessibleInterface

Windows accessibility can crash if it handles an event with an invalid
QAccessibleInterface pointer (one whose object has been deleted).

Task-number: QTBUG-41597
Change-Id: Iba099f7cb732fd00f18f04bd951c6cdd94785871
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Jan Arve Sæther <jan-arve.saether@digia.com>

cregit: 138e14d7bb749c08c751ca107393ce8b29c692d9 https://github.com/qt/qtbase/commit/138e14d7bb749c08c751ca107393ce8b29c692d9